<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_summary_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:paddingTop="32dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

        <TextView
            android:id="@+id/tvCourseCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/course_name_placeholder"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCourseDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="20dp"
            android:text="@string/course_days_placeholder"
            app:layout_constraintEnd_toStartOf="@+id/tvCourseTime"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCourseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/course_time_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCourseProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/course_prof_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourseCode" />

        <TextView
            android:id="@+id/tvCourseRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp"
            android:text="@string/course_room_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourseTime" />

        <LinearLayout
            android:id="@+id/expanded_view_summary_item_layout"
            android:layout_width="139dp"
            android:layout_height="46dp"
            android:layout_margin="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourseProf">

                <Button
                    android:id="@+id/view_summary_remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remove course" />
        </LinearLayout>

        <View
            android:id="@+id/view_summary_bottom_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expanded_view_summary_item_layout" />

</android.support.constraint.ConstraintLayout>